feat: migrate ADL authority to Aeron